# tiny-lang

./: Ast.c  Ast.h  CMakeLists.txt  Compile.c  Compile.h  Compiler.c  Compiler.h  Eval.c  Eval.h  LICENSE  Lexer.c  Lexer.h  Lexing.c  Lexing.h  Main.c  Memory.c  Memory.h  Parser.c  Parser.h  Parsing.c  Parsing.h  README.md  Stream.c  Stream.h  StringBuffer.c  StringBuffer.h  SymbolTable.c  SymbolTable.h  Token.c  Token.h  Util.c  Util.h  Value.c  Value.h
test/: prog01.tl
tests/: fact.tl  prog01.tl  test01.tl  test02.tl  test03.tl  test04.tl  test05.tl  test06.tl  test07.tl  test08.tl  test09.tl  test10.tl
